# bin2img

./: .gitignore  CMakeLists.txt  run.sh
src/: .gitignore  main.cpp
